// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package nsl.clusters.v1;

option go_package = "namespacelabs.dev/foundation/public/nscloud/proto/v1";

message EnvironmentDestroyed {
    string cluster_id = 1;
}

message EnvironmentDoesntExist {
    string cluster_id = 1;
}

message UserMessage {
    string message = 1;
}

message WorkspaceExpired {
    string message = 1;
}